// Copyright 2020 David Pollak
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package mesax;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc HelloOverAgain (HelloRequest) returns (stream HelloReply) {}
}

// An address 
message Address {
    uint64 rowId = 1;
    uint64 colId = 2;
}

// a rectangular range
message SingleRange {
    Address upperLeft = 1;
    Address lowerRight = 2;
}

// A range
message Range {
    repeated SingleRange ranges = 1;
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
  int32 count = 2;
}